[package]
name = "earley"
version = "0.1.0"
authors = ["Jonas Nicklas <jonas.nicklas@gmail.com>"]
description = "A library for constructing parsers from formal grammars using earley's algorithm"
license = "MIT"

[dependencies]
unicode-segmentation = "*"
log = "*"

[dev-dependencies]
env_logger = "*"
