[package]
authors = ["Jonas Nicklas <jonas.nicklas@gmail.com>"]
description = "A library for constructing parsers from formal grammars using earley's algorithm"
license = "MIT"
name = "earley"
version = "0.1.0"
repository = "https://github.com/jnicklas/earley"
keywords = ["grammar", "parsing", "parser", "recognizer", "language"]
